--- a/MiniWeather/MiniWeather.entitlements
+++ b/MiniWeather/MiniWeather.entitlements
@@ -10,6 +10,8 @@
 	<array>
 		<string>CloudKit</string>
 	</array>
+	<key>com.apple.developer.weatherkit</key>
+	<true/>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
