--- a/MiniWeather/Info.plist
+++ b/MiniWeather/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>MiniWeather needs your current location to automatically fill in weather info for it.</string>
+	<key>NSLocationUsageDescription</key>
+	<string>MiniWeather needs your current location to automatically fill in weather info for it.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
