--- a/MiniWeather/MiniWeather.entitlements
+++ b/MiniWeather/MiniWeather.entitlements
@@ -14,5 +14,9 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.personal-information.location</key>
+	<true/>
 </dict>
 </plist>
