--- a/MiniWeather.xcodeproj/xcshareddata/xcschemes/MiniWeather.xcscheme
+++ b/MiniWeather.xcodeproj/xcshareddata/xcschemes/MiniWeather.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BEC47B342B8E4A9700BF39FD"
+               BuildableName = "MiniWeatherTests.xctest"
+               BlueprintName = "MiniWeatherTests"
+               ReferencedContainer = "container:MiniWeather.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
